--- a/origin-web/src/main/resources/application-dev.yml
+++ b/origin-web/src/main/resources/application-dev.yml
@@ -1,7 +1,7 @@
 spring:
   datasource:
-    driver-class-name: com.p6spy.engine.spy.P6SpyDriver
-    url: jdbc:p6spy:postgresql://127.0.0.1:5432/origin?serverTimezone=Asia/Shanghai
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://127.0.0.1:5432/origin?serverTimezone=Asia/Shanghai
     username: root
     password: wzw123!@#
     hikari:
