--- a/origin-admin/pom.xml
+++ b/origin-admin/pom.xml
@@ -16,7 +16,17 @@
     <dependencies>
         <dependency>
             <groupId>com.cosmos</groupId>
+            <artifactId>origin-admin-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
             <artifactId>origin-common</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-biz-operationlog-spring-boot-starter</artifactId>
         </dependency>
 
         <dependency>
