--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,8 @@
         <module>origin-jwt</module>
         <!-- 认证服务 -->
         <module>origin-auth</module>
+        <!-- 管理后台 API 模块 -->
+        <module>origin-admin-api</module>
         <!-- 管理后台 -->
         <module>origin-admin</module>
         <!-- 入口模块 -->
@@ -41,6 +43,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <!-- Spring AI 版本 -->
         <spring-ai.version>1.1.1</spring-ai.version>
+        <!-- Spring Cloud 版本 -->
+        <spring-cloud.version>2024.0.0</spring-cloud.version>
         <!-- Maven 相关 -->
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
@@ -78,6 +82,21 @@
                 <scope>import</scope>
             </dependency>
 
+            <!-- Spring Cloud 模块管理 -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring-cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.cosmos</groupId>
+                <artifactId>origin-admin-api</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
             <dependency>
                 <groupId>com.cosmos</groupId>
                 <artifactId>origin-admin</artifactId>
@@ -87,6 +106,12 @@
             <dependency>
                 <groupId>com.cosmos</groupId>
                 <artifactId>origin-common</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.cosmos</groupId>
+                <artifactId>origin-biz-operationlog-spring-boot-starter</artifactId>
                 <version>${revision}</version>
             </dependency>
 
