--- a/origin-web/src/main/resources/application.yml
+++ b/origin-web/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   profiles:
     # 默认激活的环境
     active: dev
+  servlet:
+    multipart:
+      max-file-size: 100MB # 限制单个上传文件的最大大小为 100MB。如果上传的文件大小超过这个值，将会被拒绝上传。
+      max-request-size: 100MB # 限制整个上传请求的最大大小为 100MB。这包括所有上传文件的大小之和。如果请求总大小超过这个值，将会被拒绝。
 
 jwt:
   # 签发人
