--- a/origin-admin/origin-admin-biz/pom.xml
+++ b/origin-admin/origin-admin-biz/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>origin-oss-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-event-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- MyBatis-Flex -->
         <dependency>
             <groupId>com.mybatis-flex</groupId>
