feat(websocket): 实现聊天室历史消息和在线用户功能
- 新增 ChatRoomController，提供获取历史消息和在线用户接口
- 新增 ChatRoomService 及实现类，实现消息分页查询和在线用户获取
- 增强 ChatMessageMapper，支持分页查询最近消息和历史消息
- 扩展 ChatRoomMessageTypeEnum，添加在线用户列表消息类型
- 实现 ChatWebSocketServer 在线用户广播及获取逻辑
- 新增相关 VO 类支持聊天消息分页响应和在线用户信息展示
- 在 application.yml 中添加 websocket 控制器扫描配置
- 引入操作日志依赖，用于接口操作日志记录

--- a/origin-framework/origin-websocket-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-websocket-spring-boot-starter/pom.xml
@@ -20,6 +20,11 @@
             <artifactId>origin-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-operationlog-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- Spring Boot Starter -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
