--- a/origin-framework/origin-websocket-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-websocket-spring-boot-starter/pom.xml
@@ -22,6 +22,16 @@
 
         <dependency>
             <groupId>com.cosmos</groupId>
+            <artifactId>origin-jwt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-admin-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
             <artifactId>origin-operationlog-spring-boot-starter</artifactId>
         </dependency>
 
