feat(admin-comment): 新增后台评论管理功能
- 新增评论分页查询接口，返回分页封装结果
- 实现评论删除功能，支持一级及二级评论连带删除
- 新增评论审核接口，支持状态更新与审核原因记录
- 编写管理后台评论接口控制器，集成分页、删除、审核操作
- admin 模块中引入 comment 相关依赖，支持评论业务扩展
- 移除 comment 模块中冗余分页及管理相关接口和实现代码
- 完善请求参数校验及响应包装，统一接口返回格式

--- a/origin-admin/origin-admin-biz/pom.xml
+++ b/origin-admin/origin-admin-biz/pom.xml
@@ -39,6 +39,17 @@
             <artifactId>origin-oss-spring-boot-starter</artifactId>
         </dependency>
 
+        <!-- 评论模块，用于管理后台审核、删除评论 -->
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-comment-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-comment-biz</artifactId>
+        </dependency>
+
         <!-- MyBatis-Flex -->
         <dependency>
             <groupId>com.mybatis-flex</groupId>
