refactor(jackson): 重构 Jackson 配置为独立自动配置模块
- 移除 origin-common 中的 JacksonConfig 类及其相关配置
- 新增 origin-jackson-spring-boot-starter 模块，包含 JacksonAutoConfiguration 自动配置类
- JacksonAutoConfiguration 提供统一的 Jackson 序列化和反序列化规则
- Jackson 配置支持 LocalDateTime、LocalDate、LocalTime、YearMonth 类型的序列化反序列化
- JsonUtil 中初始化的 ObjectMapper 调整为通过自动配置注入
- origin-framework 项目模块列表新增 origin-jackson-spring-boot-starter 模块
- 移除多个子模块中 Maven 编译插件中 Lombok 注解处理器配置
- 主项目 pom.xml 添加 flatten-maven-plugin 插件，解决子模块打包版本号解析问题
- origin-event、origin-scheduler、origin-websocket 等模块 pom.xml 中新增 spring-boot-autoconfigure 依赖
- .gitignore 文件新增对 *.flattened-pom.xml 文件的忽略规则

--- a/origin-framework/origin-event-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-event-spring-boot-starter/pom.xml
@@ -15,16 +15,16 @@
     <description>事件驱动服务 Spring Boot Starter，提供自定义线程池和 Spring 事件发布订阅功能</description>
 
     <dependencies>
-        <!-- Spring Boot Starter -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-        </dependency>
-
         <!-- Spring Context，用于事件发布订阅 -->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+        </dependency>
+
+        <!-- SLF4J API，用于日志记录 -->
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
         </dependency>
 
         <!-- Lombok -->
@@ -38,6 +38,12 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
+
+        <!-- Spring Boot AutoConfigure -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-autoconfigure</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -45,15 +51,6 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                </configuration>
             </plugin>
         </plugins>
     </build>
