feat(gateway): 新增API网关限流功能及相关配置模块
- 新增origin-gateway-spring-boot-starter，提供限流、路由、访问日志功能
- 实现基于Redis的滑动窗口限流算法，支持全局与路径限流阈值配置
- 增加白名单和黑名单支持，保证关键路径和安全控制
- 新增访问日志拦截器，记录请求方法、路径、响应状态及耗时
- application.yml及各环境配置新增网关限流参数，支持灵活配置
- origin-redis-spring-boot-starter提供Redis缓存和分布式锁支持
- 各模块pom文件新增相关依赖，优化依赖管理和版本控制
- 编写网关自动配置类，集成限流工具和过滤器，自动注入Bean
- GatewayWebMvcConfiguration注册访问日志拦截器，排除静态资源干扰
- AuthService新增登录尝试记录与账号锁定功能，防止暴力破解攻击
- 统一引入springdoc-openapi以支持OpenAPI/Swagger文档注解
- 优化基础组件pom文件，调整依赖传递和可选性，提升模块解耦性

--- a/origin-auth/pom.xml
+++ b/origin-auth/pom.xml
@@ -22,6 +22,34 @@
             <artifactId>origin-common</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-jwt</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-redis-spring-boot-starter</artifactId>
+        </dependency>
+
+        <!-- Spring Security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <!-- Spring Web -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <!-- 参数校验 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <!-- 单元测试 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
