--- a/origin-framework/origin-common/pom.xml
+++ b/origin-framework/origin-common/pom.xml
@@ -55,19 +55,21 @@
         <dependency>
             <groupId>com.github.xingfudeshi</groupId>
             <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- 参数校验 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- Mybatis Flex -->
         <dependency>
             <groupId>com.mybatis-flex</groupId>
             <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
-            <optional>false</optional> <!-- 是否传递依赖 -->
+            <optional>true</optional> <!-- 不传递依赖 -->
         </dependency>
 
         <!-- Spring Web -->
@@ -81,6 +83,7 @@
         <dependency>
             <groupId>io.github.toolgood</groupId>
             <artifactId>toolgood-words</artifactId>
+            <optional>true</optional>
         </dependency>
 
         <!-- 单元测试 -->
