--- a/origin-framework/origin-websocket-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-websocket-spring-boot-starter/pom.xml
@@ -46,6 +46,12 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
+
+        <!-- MyBatis-Flex -->
+        <dependency>
+            <groupId>com.mybatis-flex</groupId>
+            <artifactId>mybatis-flex-spring-boot3-starter</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
