--- a/origin-web/src/main/resources/application-dev.yml
+++ b/origin-web/src/main/resources/application-dev.yml
@@ -33,6 +33,20 @@ spring:
       timeout: 2000ms
 
 #=================================================================
+# 网关限流配置（开发环境可放宽限制）
+#=================================================================
+origin:
+  gateway:
+    enabled: true
+    rate-limit:
+      enabled: true
+      default-limit: 200              # 开发环境放宽到 200/s
+      time-window: 1
+      path-limits:
+        /api/user/login: 20           # 开发环境 20/s
+        /api/user/register: 20
+
+#=================================================================
 # minio
 #=================================================================
 minio:
