--- a/origin-web/src/main/resources/application-prod.yml
+++ b/origin-web/src/main/resources/application-prod.yml
@@ -33,6 +33,24 @@ spring:
       timeout: 2000ms
 
 #=================================================================
+# 网关限流配置（生产环境严格限制）
+#=================================================================
+origin:
+  gateway:
+    enabled: true
+    rate-limit:
+      enabled: true
+      default-limit: 50               # 生产环境限制 50/s
+      time-window: 1
+      path-limits:
+        /api/user/login: 5            # 登录接口严格限制 5/s
+        /api/user/register: 5         # 注册接口 5/s
+        /api/order/create: 10         # 下单接口 10/s
+    white-list:
+      - /health
+      - /public
+
+#=================================================================
 # minio
 #=================================================================
 minio:
