--- a/origin-admin/origin-admin-biz/pom.xml
+++ b/origin-admin/origin-admin-biz/pom.xml
@@ -39,6 +39,11 @@
             <artifactId>origin-oss-spring-boot-starter</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.cosmos</groupId>
+            <artifactId>origin-redis-spring-boot-starter</artifactId>
+        </dependency>
+
         <!-- 评论模块，用于管理后台审核、删除评论 -->
         <dependency>
             <groupId>com.cosmos</groupId>
@@ -60,12 +65,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
-        </dependency>
-
-        <!-- Spring Data Redis，用于登录限流 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
         <!-- User-Agent 解析工具，用于登录日志记录浏览器和操作系统信息 -->
