--- a/origin-framework/pom.xml
+++ b/origin-framework/pom.xml
@@ -34,6 +34,10 @@
         <module>origin-scheduler-spring-boot-starter</module>
         <!-- WebSocket 服务组件 -->
         <module>origin-websocket-spring-boot-starter</module>
+        <!-- Redis 分布式缓存组件 -->
+        <module>origin-redis-spring-boot-starter</module>
+        <!-- API 网关组件 -->
+        <module>origin-gateway-spring-boot-starter</module>
     </modules>
 
 </project>
