--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,8 @@
         <minio.version>8.2.1</minio.version>
         <toolgood-words.version>3.1.0.1</toolgood-words.version>
         <flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
+        <!-- SpringDoc OpenAPI 版本 -->
+        <springdoc.version>2.8.6</springdoc.version>
     </properties>
 
     <!-- 统一依赖管理 -->
@@ -158,6 +160,18 @@
 
             <dependency>
                 <groupId>com.cosmos</groupId>
+                <artifactId>origin-redis-spring-boot-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.cosmos</groupId>
+                <artifactId>origin-gateway-spring-boot-starter</artifactId>
+                <version>${revision}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.cosmos</groupId>
                 <artifactId>origin-example</artifactId>
                 <version>${revision}</version>
             </dependency>
@@ -191,6 +205,13 @@
                 <groupId>com.github.xingfudeshi</groupId>
                 <artifactId>knife4j-openapi3-jakarta-spring-boot-starter</artifactId>
                 <version>${knife4j.version}</version>
+            </dependency>
+
+            <!-- SpringDoc OpenAPI 注解 -->
+            <dependency>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-starter-common</artifactId>
+                <version>${springdoc.version}</version>
             </dependency>
 
             <!-- Mybatis Flex -->
