refactor(auth): 移除过时的认证服务代码
- 删除 AuthService 类及相关登录尝试和账号锁定逻辑
- 清理不再使用的 Redis 缓存和锁工具类引用
- 统一依赖管理中添加 Redisson 和 Sentinel 版本管理
- 在主 pom.xml 中添加 Redisson 和 Sentinel 依赖声明
- 在 origin-admin-biz 模块 pom 文件中调整对评论模块的依赖注释说明
- 移除 origin-framework 模块内 Redisson 和 Sentinel 依赖中重复的版本声明
- 在 application-dev.yml 中为 Lettuce 连接池配置添加连接数和等待时间注释说明

--- a/origin-admin/origin-admin-biz/pom.xml
+++ b/origin-admin/origin-admin-biz/pom.xml
@@ -45,6 +45,7 @@
         </dependency>
 
         <!-- 评论模块，用于管理后台审核、删除评论 -->
+        <!-- 注意：admin-biz 直接依赖 comment-biz，因为需要直接访问 CommentDO 和 CommentMapper -->
         <dependency>
             <groupId>com.cosmos</groupId>
             <artifactId>origin-comment-api</artifactId>
