--- a/origin-web/src/main/resources/application-dev.yml
+++ b/origin-web/src/main/resources/application-dev.yml
@@ -24,10 +24,10 @@ spring:
       database: 0
       lettuce:
         pool:
-          max-active: 8
-          max-wait: -1ms
-          max-idle: 8
-          min-idle: 0
+          max-active: 8 # 连接池中最大连接数
+          max-wait: -1ms # 获取连接的最大等待时间，单位毫秒
+          max-idle: 8 # 连接池中最大空闲连接数
+          min-idle: 0 # 连接池中最小空闲连接数
       # 连接超时时间（如果 Redis 不可用，快速失败）
       connect-timeout: 2000ms
       timeout: 2000ms
