refactor(websocket): 使用SPI接口替换WebSocket用户服务API实现
- 删除了origin-admin模块中WebSocketUserServiceApi接口及其相关VO类
- 创建WebSocketUserServiceProvider SPI接口，定义用户信息查询方法及用户信息类
- 修改WebSocket模块代码通过SPI接口获取用户信息，增强模块解耦和可插拔性
- origin-admin模块实现SPI接口，提供用户信息查询实现
- 调整相关依赖，移除对origin-admin-api的直接依赖
- 优化application.yml增加详细注释和配置分区，提高配置可读性

--- a/origin-auth/pom.xml
+++ b/origin-auth/pom.xml
@@ -38,13 +38,7 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
 
-        <!-- Spring Web -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
-        <!-- 参数校验 -->
+        <!-- 参数校验（包含 Spring Web） -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
