--- a/origin-framework/origin-jwt-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-jwt-spring-boot-starter/pom.xml
@@ -66,7 +66,7 @@
             <artifactId>UserAgentUtils</artifactId>
         </dependency>
 
-        <!-- Spring Web -->
+        <!-- Spring Web（JWT模块需要Servlet API） -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
