--- a/origin-framework/origin-websocket-spring-boot-starter/pom.xml
+++ b/origin-framework/origin-websocket-spring-boot-starter/pom.xml
@@ -25,11 +25,7 @@
             <artifactId>origin-jwt-spring-boot-starter</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.cosmos</groupId>
-            <artifactId>origin-admin-api</artifactId>
-        </dependency>
-
+        <!-- 操作日志组件 -->
         <dependency>
             <groupId>com.cosmos</groupId>
             <artifactId>origin-operationlog-spring-boot-starter</artifactId>
