--- a/origin-web/src/main/resources/application.yml
+++ b/origin-web/src/main/resources/application.yml
@@ -1,6 +1,12 @@
+# ===========================================
+# 服务基础配置
+# ===========================================
 server:
   port: 8081
 
+# ===========================================
+# Spring 核心配置
+# ===========================================
 spring:
   application:
     name: "技术底座单体版"
@@ -9,9 +15,14 @@ spring:
     active: dev
   servlet:
     multipart:
-      max-file-size: 100MB # 限制单个上传文件的最大大小为 100MB。如果上传的文件大小超过这个值，将会被拒绝上传。
-      max-request-size: 100MB # 限制整个上传请求的最大大小为 100MB。这包括所有上传文件的大小之和。如果请求总大小超过这个值，将会被拒绝。
+      # 限制单个上传文件的最大大小为 100MB
+      max-file-size: 100MB
+      # 限制整个上传请求的最大大小为 100MB（包括所有上传文件的大小之和）
+      max-request-size: 100MB
 
+# ===========================================
+# JWT 认证配置
+# ===========================================
 jwt:
   # 签发人
   issuer: "一陌千尘"
@@ -26,7 +37,9 @@ jwt:
   # token 请求头中的 value 值前缀
   tokenPrefix: Bearer
 
-# 登录次数限制配置
+# ===========================================
+# 登录安全策略配置
+# ===========================================
 login:
   attempt:
     # 是否开启登录次数限制功能（true: 开启, false: 关闭）
@@ -39,8 +52,11 @@ login:
     # 登录策略配置：single-单设备登录（互踢），multiple-多设备登录（默认: multiple）
     strategy: multiple
 
+# ===========================================
+# 自定义组件配置（origin-framework）
+# ===========================================
 origin:
-  # 事件驱动自定义线程池配置（可选配置，不配置则使用默认值）
+  # 事件驱动自定义线程池配置
   event:
     thread-pool:
       # 核心线程数，默认为 CPU 核心数
@@ -57,6 +73,7 @@ origin:
       wait-for-tasks-to-complete-on-shutdown: true
       # 等待任务完成的超时时间（秒），默认为 60 秒
       await-termination-seconds: 60
+
   # 定时任务线程池配置
   scheduler:
     thread-pool:
@@ -68,7 +85,8 @@ origin:
       wait-for-tasks-to-complete-on-shutdown: true
       # 等待任务完成后再关闭线程池的超时时间（秒）
       await-termination-seconds: 60
-  # 网关配置
+
+  # 网关配置（限流、熔断、路由）
   gateway:
     enabled: true                           # 是否启用网关功能
     rate-limit:
@@ -87,7 +105,9 @@ origin:
       - /v3/api-docs
     black-list: []                          # 黑名单（IP或用户ID）
 
-# springdoc-openapi 配置
+# ===========================================
+# API 文档配置（SpringDoc + Knife4j）
+# ===========================================
 springdoc:
   swagger-ui:
     path: /swagger-ui.html
@@ -103,7 +123,10 @@ springdoc:
         - com.cosmos.origin.admin.controller
         - com.cosmos.origin.websocket.controller
         - com.cosmos.origin.comment.controller
+
+# ===========================================
 # 评论功能配置
+# ===========================================
 comment:
   examine:
     # 是否开启评论审核功能（true: 开启, false: 关闭）
@@ -113,7 +136,9 @@ comment:
       # 是否开启敏感词过滤功能（true: 开启, false: 关闭）
       open: false
 
-# knife4j 增强配置
+# ===========================================
+# Knife4j 增强配置
+# ===========================================
 knife4j:
   enable: true
   setting:
